fixed create API issues